--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A flappy bird but with a heron (so original -_- !)",
   "main": "index.js",
   "scripts": {
-    "start": "./node_modules/.bin/http-server -s -o",
+    "start": "webpack-dev-server --config webpack.config",
+    "build": "webpack --config webpack.config.js  --mode=production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,6 +28,18 @@
     "phaser": "^3.23.0"
   },
   "devDependencies": {
-    "http-server": "^0.12.3"
+    "@babel/core": "^7.10.3",
+    "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.3.0",
+    "image-webpack-loader": "^6.0.0",
+    "imagemin": "^7.0.1",
+    "postcss-loader": "^3.0.0",
+    "typescript": "^3.9.5",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^4.2.2"
   }
 }
