--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/jeremybeaucousin/FlappyHeron#readme",
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
     "phaser": "^3.23.0"
   },
   "devDependencies": {
